# routes/api.php
@@ -76,6 +76,7 @@ Route::middleware(['auth:api'])->group(function () {
     Route::post('groups/add/{uid}', 'addcontact');
     Route::post('groups/del/{uid}', 'delcontact');
     Route::post('groups/contact/{uid}', 'contact');
+    Route::post('groups/imports/{uid}', 'imports');
     Route::post('groups/blacklist/{uid}', 'blacklist');
   });
   // Route pour les Publipostages
